- frontend refactoring - added update to itemgroup api

--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
@@ -18,7 +18,8 @@
         </div>
     </div>
 
-    <item-list-editor params="model: model" style="width: 100%"></item-list-editor>
+    @*<item-list-editor params="model: model" style="width: 100%"></item-list-editor>*@
+    <item-list-editor style="width: 100%"></item-list-editor>
 
 </section>
 
