- solved itemlist bug - various adjustments

--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/Browse.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/Browse.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "_Layout";
-    ViewData["Title"] = "Alle Listen";
-    ViewData["PageTitle"] = "Alle Listen";
+    ViewData["Title"] = "Liste suchen";
+    ViewData["PageTitle"] = "Liste suchen";
 }
 
 <section class="container">
@@ -20,10 +20,8 @@
     <table>
         <thead>
             <tr>
-                <th width="50%">Name</th>
-                <th width="25%" class="show-large">Einträge</th>
-                <th class="show-large">Von</th>
-                <th class="icon show-large"></th>
+                <th width="75%">Name</th>
+                <th>Von</th>
             </tr>
         </thead>
 
@@ -34,11 +32,7 @@
                     <td>
                         <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
                     </td>
-                    <td class="show-large">@list.ItemCount</td>
                     <td class="show-large">@list.Owner.UserName</td>
-                    <td class="icon show-large">
-                        <a asp-area="Lists" asp-controller="ItemList" asp-action="Update" asp-route-id="@list.Id" class="icon-24 icon-pen" title="Bearbeiten"></a>
-                    </td>
                 </tr>
             }
         </tbody>
