--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
@@ -10,7 +10,6 @@
 
     <div class="flex-row align-right actions">
         <a asp-controller="ItemList" asp-action="Create">Liste erstellen</a>
-        <a href="#">Listen suchen</a>
     </div>
 
 </section>
@@ -67,7 +66,7 @@
         </div>
 
         <div class="flex-row align-right actions" style="width: 50%">
-            <a asp-controller="ItemList" asp-action="Browse">Suchen</a>
+            <a asp-controller="ItemList" asp-action="Browse">Liste suchen</a>
         </div>
     </div>
 
