--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/Update.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/Update.cshtml
@@ -27,36 +27,38 @@
         }
     </div>
 
-    <form asp-area="Lists" asp-controller="ItemList" asp-action="Update">
-        <fieldset>
+    <div class="standard-box centered-form">
+        <form asp-area="Lists" asp-controller="ItemList" asp-action="Update">
+            <fieldset>
 
-            <div class="form-group">
-                <label asp-for="Name"></label>
-                <input asp-for="Name" required/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Description"></label>
-                <input asp-for="Description"/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="IsPublic"></label>
-                <input asp-for="IsPublic"/>
-            </div>
-
-            <div class="form-group flex-row">
-
-                <div class="flex-row" style="width: 50%">
-                    <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Löschen</a>
+                <div class="form-group">
+                    <label asp-for="Name"></label>
+                    <input asp-for="Name" required />
                 </div>
 
-                <div class="flex-row align-right" style="width: 50%">
-                    <input class="btn-primary" type="submit" value="Ändern">
+                <div class="form-group">
+                    <label asp-for="Description"></label>
+                    <input asp-for="Description" />
                 </div>
-            </div>
 
-        </fieldset>
-    </form>
+                <div class="form-group">
+                    <label asp-for="IsPublic"></label>
+                    <input asp-for="IsPublic" />
+                </div>
+
+                <div class="form-group flex-row">
+
+                    <div class="flex-row" style="width: 50%">
+                        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Löschen</a>
+                    </div>
+
+                    <div class="flex-row align-right" style="width: 50%">
+                        <input class="btn-primary" type="submit" value="Ändern">
+                    </div>
+                </div>
+
+            </fieldset>
+        </form>
+    </div>
 
 </section>
