--- a/src/FlatMate.Web/wwwroot/css/var/colors.scss
+++ b/src/FlatMate.Web/wwwroot/css/var/colors.scss
@@ -8,3 +8,4 @@ $color-font: #000;
 $color-border: #d1d1d1;
 $color-background: #f4f5f6;
 $color-font-input: #55595c;
+$color-main-background: #e5e7ea;
