--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/Create.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/Create.cshtml
@@ -8,14 +8,6 @@
 
 <section class="container">
 
-    <div class="flex-row actions">
-        <a href="javascript:history.back()">Zurück</a>
-    </div>
-
-</section>
-
-<section class="container centered-form">
-
     <div class="alert-wrapper">
         @if (Model.IsError)
         {
@@ -27,29 +19,31 @@
         }
     </div>
 
-    <form asp-area="Lists" asp-controller="ItemList" asp-action="Create" method="post">
-        <fieldset>
+    <div class="centered-form standard-box">
+        <form asp-area="Lists" asp-controller="ItemList" asp-action="Create" method="post">
+            <fieldset>
 
-            <div class="form-group">
-                <label asp-for="Name"></label>
-                <input asp-for="Name" required/>
-            </div>
+                <div class="form-group">
+                    <label asp-for="Name"></label>
+                    <input asp-for="Name" required />
+                </div>
 
-            <div class="form-group">
-                <label asp-for="Description"></label>
-                <input asp-for="Description"/>
-            </div>
+                <div class="form-group">
+                    <label asp-for="Description"></label>
+                    <input asp-for="Description" />
+                </div>
 
-            <div class="form-group">
-                <label asp-for="IsPublic"></label>
-                <input asp-for="IsPublic"/>
-            </div>
+                <div class="form-group">
+                    <label asp-for="IsPublic"></label>
+                    <input asp-for="IsPublic" />
+                </div>
 
-            <div class="form-group align-right">
-                <input class="btn-primary" type="submit" value="Erstellen">
-            </div>
+                <div class="form-group align-right">
+                    <input class="btn-primary" type="submit" value="Erstellen">
+                </div>
 
-        </fieldset>
-    </form>
+            </fieldset>
+        </form>
+    </div>
 
 </section>
