--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
@@ -27,41 +27,43 @@
         }
     </div>
 
-    <table>
-        <thead>
-            <tr>
-                <th width="50%">Name</th>
-                <th width="25%" class="show-large">Einträge</th>
-                <th class="show-large">Öffentlich?</th>
-                <th class="icon show-large"></th>
-            </tr>
-        </thead>
-
-        <tbody>
-            @foreach (var list in Model.MyLists)
-            {
+    <div class="standard-box">
+        <table>
+            <thead>
                 <tr>
-                    <td>
-                        <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
-                    </td>
-                    <td class="show-large">@list.ItemCount</td>
-                    <td class="show-large">
-                        <input type="checkbox" checked="@list.IsPublic" disabled title="Öffentlich?" />
-                    </td>
-                    <td class="icon show-large">
-                        <a asp-area="Lists" asp-controller="ItemList" asp-action="Update" asp-route-id="@list.Id" class="icon-24 icon-pen" title="Bearbeiten"></a>
-                    </td>
+                    <th width="50%">Name</th>
+                    <th width="25%" class="show-large">Einträge</th>
+                    <th class="show-large">Öffentlich?</th>
+                    <th class="icon show-large"></th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+
+            <tbody>
+                @foreach (var list in Model.MyLists)
+                {
+                    <tr>
+                        <td>
+                            <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
+                        </td>
+                        <td class="show-large">@list.ItemCount</td>
+                        <td class="show-large">
+                            <input type="checkbox" checked="@list.IsPublic" disabled title="Öffentlich?" />
+                        </td>
+                        <td class="icon show-large">
+                            <a asp-area="Lists" asp-controller="ItemList" asp-action="Update" asp-route-id="@list.Id" class="icon-24 icon-pen" title="Bearbeiten"></a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 
 </section>
 
 <section class="container" style="margin-top: 5rem;">
 
     <div class="flex-row">
-        <div class="flex-row actions" style="width: 50%">
+        <div class="flex-row actions vertical-center" style="width: 50%">
             <h3>Favoriten</h3>
         </div>
 
@@ -74,25 +76,38 @@
 
 <section class="container">
 
-    <table>
-        <thead>
-            <tr>
-                <th width="75%">Name</th>
-                <th width="25%" class="show-large">Von</th>
-            </tr>
-        </thead>
+    <div class="standard-box">
 
-        <tbody>
-            @foreach (var list in Model.Favorites)
-            {
-                <tr>
-                    <td>
-                        <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
-                    </td>
-                    <td class="show-large">@list.Owner.UserName</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+        @if (!Model.Favorites.Any())
+        {
+            <div style="    padding: .5rem 1rem; text-align: center">
+                Du hast noch keine Favoriten hinzugefügt.
+            </div>
+        }
+        else
+        {
+            <table>
+                <thead>
+                    <tr>
+                        <th width="75%">Name</th>
+                        <th width="25%" class="show-large">Von</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    @foreach (var list in Model.Favorites)
+                {
+                        <tr>
+                            <td>
+                                <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
+                            </td>
+                            <td class="show-large">@list.Owner.UserName</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+
+    </div>
 
 </section>
