--- a/src/FlatMate.Web/Views/_ViewImports.cshtml
+++ b/src/FlatMate.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using Newtonsoft.Json
+﻿@using System.Linq
+@using Newtonsoft.Json
 @using FlatMate.Web.Mvc.Json
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
