--- a/src/FlatMate.Web/wwwroot/css/shared/alert.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/alert.scss
@@ -14,7 +14,7 @@
 .alert {
     border: 1px solid transparent;    
     padding: .5rem .5rem;
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
     width: 100%;
 }
 
