--- a/src/FlatMate.Web/Areas/Account/Views/Login/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/Login/Index.cshtml
@@ -21,15 +21,15 @@
 
             <div class="form-group">
                 <label asp-for="UserName"></label>
-                <input asp-for="UserName" autofocus Value="fake" required/>
+                <input asp-for="UserName" autofocus required />
             </div>
 
             <div class="form-group">
                 <label asp-for="Password"></label>
-                <input asp-for="Password" Value="12345678" required/>
+                <input asp-for="Password" required />
             </div>
 
-            <input asp-for="ReturnUrl" type="hidden"/>
+            <input asp-for="ReturnUrl" type="hidden" />
 
             <div class="form-group align-right">
                 <input class="btn-primary" type="submit" value="Login">
