- fixed merge issue - minor visual changes

--- a/src/FlatMate.Web/Areas/Account/Views/MyProfile/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/MyProfile/Index.cshtml
@@ -19,7 +19,7 @@
 
     <h3>@Model.UserJso.UserName</h3>
 
-    <div class="flex-row">
+    <div class="standard-box flex-row" style="padding: 1em">
         <div class="picture-wrapper">
             <img src="~/img/account/user-default.png" alt="profil picture" class="picture"/>
         </div>
