- added clientside alertbar

--- a/src/FlatMate.Web/Areas/Account/Views/MyProfile/ChangePassword.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/MyProfile/ChangePassword.cshtml
@@ -12,42 +12,34 @@
     </div>
 </section>
 
-<section class="container centered-form">
-    <div class="alert-wrapper">
-        @if (Model.IsError)
-        {
-            <div class="alert alert-danger">@Model.Result.Message</div>
-        }
-        else if (Model.IsSuccess)
-        {
-            <div class="alert alert-success">@Model.Result.Message</div>
-        }
+<section class="container">
+    
+    <div class="centered-form standard-box">
+        <form asp-area="Account" asp-controller="MyProfile" asp-action="ChangePassword" method="post">
+            <fieldset>
+
+                <div class="form-group">
+
+                    <label asp-for="OldPassword"></label>
+                    <input asp-for="OldPassword" required/>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="NewPassword"></label>
+                    <input asp-for="NewPassword" required/>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="NewPasswordConfirmation"></label>
+                    <input asp-for="NewPasswordConfirmation" required/>
+                </div>
+
+                <div class="form-group align-right">
+                    <input class="btn-primary" type="submit" value="Ändern">
+                </div>
+
+            </fieldset>
+        </form>
     </div>
-
-    <form asp-area="Account" asp-controller="MyProfile" asp-action="ChangePassword" method="post">
-        <fieldset>
-
-            <div class="form-group">
-
-                <label asp-for="OldPassword"></label>
-                <input asp-for="OldPassword" required/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="NewPassword"></label>
-                <input asp-for="NewPassword" required/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="NewPasswordConfirmation"></label>
-                <input asp-for="NewPasswordConfirmation" required/>
-            </div>
-
-            <div class="form-group align-right">
-                <input class="btn-primary" type="submit" value="Ändern">
-            </div>
-
-        </fieldset>
-    </form>
 
 </section>
