--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
@@ -8,21 +8,6 @@
 
 <section class="container">
 
-    <div class="alert-wrapper">
-        @if (Model.IsError)
-        {
-            <div class="alert alert-danger">@Model.Result.Message</div>
-        }
-        else if (Model.IsSuccess)
-        {
-            <div class="alert alert-success">@Model.Result.Message</div>
-        }
-    </div>
-    
-</section>
-
-<section class="container">
-
     <div class="flex-row align-right actions">
         <a asp-controller="ItemList" asp-action="Create">Liste erstellen</a>
     </div>
@@ -34,30 +19,30 @@
     <div class="standard-box">
         <table>
             <thead>
-                <tr>
-                    <th width="50%">Name</th>
-                    <th width="25%" class="show-large">Einträge</th>
-                    <th class="show-large">Öffentlich?</th>
-                    <th class="icon show-large"></th>
-                </tr>
+            <tr>
+                <th width="50%">Name</th>
+                <th width="25%" class="show-large">Einträge</th>
+                <th class="show-large">öffentlich?</th>
+                <th class="icon show-large"></th>
+            </tr>
             </thead>
 
             <tbody>
-                @foreach (var list in Model.MyLists)
+            @foreach (var list in Model.MyLists)
             {
-                    <tr>
-                        <td>
-                            <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
-                        </td>
-                        <td class="show-large">@list.ItemCount</td>
-                        <td class="show-large">
-                            <input type="checkbox" checked="@list.IsPublic" disabled title="Öffentlich?" />
-                        </td>
-                        <td class="icon show-large">
-                            <a asp-area="Lists" asp-controller="ItemList" asp-action="Update" asp-route-id="@list.Id" class="icon-24 icon-pen" title="Bearbeiten"></a>
-                        </td>
-                    </tr>
-                }
+                <tr>
+                    <td>
+                        <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
+                    </td>
+                    <td class="show-large">@list.ItemCount</td>
+                    <td class="show-large">
+                        <input type="checkbox" checked="@list.IsPublic" disabled title="Öffentlich?"/>
+                    </td>
+                    <td class="icon show-large">
+                        <a asp-area="Lists" asp-controller="ItemList" asp-action="Update" asp-route-id="@list.Id" class="icon-24 icon-pen" title="Bearbeiten"></a>
+                    </td>
+                </tr>
+            }
             </tbody>
         </table>
     </div>
@@ -92,26 +77,26 @@
         {
             <table>
                 <thead>
-                    <tr>
-                        <th width="75%">Name</th>
-                        <th width="25%" class="show-large">Von</th>
-                        <th class="icon"></th>
-                    </tr>
+                <tr>
+                    <th width="75%">Name</th>
+                    <th width="25%" class="show-large">von</th>
+                    <th class="icon"></th>
+                </tr>
                 </thead>
 
                 <tbody>
-                    @foreach (var list in Model.Favorites)
+                @foreach (var list in Model.Favorites)
                 {
-                        <tr>
-                            <td>
-                                <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
-                            </td>
-                            <td class="show-large">@list.Owner.UserName</td>
-                            <td class="icon">
-                                <a asp-area="Lists" asp-controller="ItemList" asp-action="Unfavorite" asp-route-id="@list.Id" class="icon-24 icon-heart-filled" title="Als Favorit entfernen"></a>
-                            </td>
-                        </tr>
-                    }
+                    <tr>
+                        <td>
+                            <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
+                        </td>
+                        <td class="show-large">@list.Owner.UserName</td>
+                        <td class="icon">
+                            <a asp-area="Lists" asp-controller="ItemList" asp-action="Unfavorite" asp-route-id="@list.Id" class="icon-24 icon-heart-filled" title="Als Favorit entfernen"></a>
+                        </td>
+                    </tr>
+                }
                 </tbody>
             </table>
         }
