--- a/src/FlatMate.Web/Areas/Account/Views/Create/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/Create/Index.cshtml
@@ -6,48 +6,39 @@
     ViewData["PageTitle"] = "Nutzer erstellen";
 }
 
-<section class="container centered-form">
+<section class="container">
 
-    <div class="alert-wrapper">
-        @if (Model.IsError)
-        {
-            <div class="alert alert-danger">@Model.Result.Message</div>
-        }
-        else if (Model.IsSuccess)
-        {
-            <div class="alert alert-success">@Model.Result.Message</div>
-        }
+    <div class="centered-form standard-box">
+        <form asp-area="Account" asp-controller="Create" method="post">
+            <fieldset>
+
+                <div class="form-group">
+
+                    <label asp-for="UserName"></label>
+                    <input asp-for="UserName" required />
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" required />
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Password"></label>
+                    <input asp-for="Password" required />
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="PasswordConfirmation"></label>
+                    <input asp-for="PasswordConfirmation" required />
+                </div>
+
+                <div class="form-group align-right">
+                    <input class="btn-primary" type="submit" value="Erstellen">
+                </div>
+
+            </fieldset>
+        </form>
     </div>
-
-    <form asp-area="Account" asp-controller="Create" method="post">
-        <fieldset>
-
-            <div class="form-group">
-
-                <label asp-for="UserName"></label>
-                <input asp-for="UserName" required/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" required/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" required/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="PasswordConfirmation"></label>
-                <input asp-for="PasswordConfirmation" required/>
-            </div>
-
-            <div class="form-group align-right">
-                <input class="btn-primary" type="submit" value="Erstellen">
-            </div>
-
-        </fieldset>
-    </form>
 
 </section>
