--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
@@ -11,7 +11,7 @@
     <div class="flex-row align-right actions">
         <a asp-action="Update" asp-route-id="@Model.List.Id">Liste bearbeiten</a>
     </div>
-    
+
 </section>
 
 <section class="container">
@@ -96,5 +96,7 @@
 </script>
 
 @section viewData {
-    @Json.Serialize(Model.List)
+    <script type="text/json" id="data-itemlist">
+        @Json.Serialize(Model.List)
+    </script>
 }
