--- a/src/FlatMate.Web/Views/Shared/_Layout.cshtml
+++ b/src/FlatMate.Web/Views/Shared/_Layout.cshtml
@@ -3,78 +3,93 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - FlatMate</title>
 
-    <link asp-href-include="~/dist/app.css" rel="stylesheet"/>
+    <link asp-href-include="~/dist/app.css" rel="stylesheet" />
 
 </head>
 <body>
-<header>
-    <div class="header-wrapper">
-        <div class="page-title">
-            <h1>@ViewData["PageTitle"]</h1>
-        </div>
-        <div class="flex-row nav-toggle">
-            <div class="menu-toggle">
-                <label class=" icon-32 icon-burger" for="menu-checkbox"></label>
+    <header>
+        <div class="header-wrapper">
+            <div class="page-title">
+                <h1>@ViewData["PageTitle"]</h1>
+            </div>
+            <div class="flex-row nav-toggle">
+                <div class="menu-toggle">
+                    <label class=" icon-32 icon-burger" for="menu-checkbox"></label>
+                </div>
+
+                <div class="welcome-wrapper">
+                    @if (Model.CurrentUser != null)
+                    {
+                        <span class="welcome">Hallo @Model.CurrentUser.UserName!</span>
+                    }
+                    else
+                    {
+                        <span class="welcome">Hallo!</span>
+                    }
+                </div>
+
             </div>
 
-            <div class="welcome-wrapper">
-                @if (Model.CurrentUser != null)
-                {
-                    <span class="welcome">Hallo @Model.CurrentUser.UserName!</span>
-                }
-                else
-                {
-                    <span class="welcome">Hallo!</span>
-                }
-            </div>
+        </div>
+    </header>
 
+    <input id="menu-checkbox" type="checkbox" style="display: none" />
+
+    <nav>
+        <ul>
+            <li>
+                <a asp-area="Home" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
+            </li>
+            <li>
+                <a asp-area="Lists" asp-controller="ItemList" asp-action="My">Listen</a>
+            </li>
+            <li>
+                <a asp-area="Account" asp-controller="MyProfile" asp-action="Index">Profil</a>
+            </li>
+            <li>
+                <a asp-area="Account" asp-controller="Logout" asp-action="Index">Logout</a>
+            </li>
+        </ul>
+    </nav>
+
+    <main>
+        <section class="container">
+            <alert-bar></alert-bar>
+        </section>
+
+        @RenderBody()
+    </main>
+
+    <script type="text/x-template" id="alert-bar-template">
+
+        <div class="alert-wrapper" data-bind="foreach: alerts">
+            <div class="alert" data-bind="css: { 'alert-success': 'Success' === levelString(), 'alert-error': 'Error' === levelString() }"><span data-bind="text: message"></span></div>
         </div>
 
-    </div>
-</header>
-
-<input id="menu-checkbox" type="checkbox" style="display: none"/>
-
-<nav>
-    <ul>
-        <li>
-            <a asp-area="Home" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
-        </li>
-        <li>
-            <a asp-area="Lists" asp-controller="ItemList" asp-action="My">Listen</a>
-        </li>
-        <li>
-            <a asp-area="Account" asp-controller="MyProfile" asp-action="Index">Profil</a>
-        </li>
-        <li>
-            <a asp-area="Account" asp-controller="Logout" asp-action="Index">Logout</a>
-        </li>
-    </ul>
-</nav>
-
-<main>
-    @RenderBody()
-</main>
-
-@if (Model != null)
-{
-    <script type="application/json" id="userData">
-            @Json.Serialize(Model.CurrentUser)
-        </script>
-}
-
-<script type="text/json" id="view-data">
-        @(await RenderSectionAsync("viewData", false))
     </script>
 
-<script asp-src-include="~/dist/vendor.js" type="text/javascript"></script>
-<script asp-src-include="~/dist/app.js" type="text/javascript"></script>
+    @if (Model != null)
+    {
+        <script type="application/json" id="data-current-user">
+            @Json.Serialize(Model.CurrentUser)
 
-@(await RenderSectionAsync("pageScript", false))
+        </script>
+    }
+
+    @RenderSection("viewData", false)
+
+    <script type="text/json" id="data-alert">
+        @Json.Serialize(Model.Result)
+    </script>
+
+    <script asp-src-include="~/dist/vendor.js" type="text/javascript"></script>
+    <script asp-src-include="~/dist/app.js" type="text/javascript"></script>
+
+    @RenderSection("pageScript", false)
 
 </body>
 </html>
