--- a/src/FlatMate.Web/Areas/Account/Views/MyProfile/ChangePassword.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/MyProfile/ChangePassword.cshtml
@@ -8,7 +8,7 @@
 
 <section class="container">
     <div class="flex-row actions">
-        <a asp-action="Index">< Mein Profil</a>
+        <a asp-action="Index">Mein Profil</a>
     </div>
 </section>
 
