--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/Update.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/Update.cshtml
@@ -42,7 +42,7 @@
                     </div>
 
                     <div class="flex-row align-right" style="width: 50%">
-                        <input class="btn-primary" type="submit" value="Ändern">
+                        <input class="btn-primary" type="submit" value="Speichern">
                     </div>
                 </div>
 
