--- a/src/FlatMate.Web/Views/Shared/_Layout.cshtml
+++ b/src/FlatMate.Web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,12 @@
             </div>
             <div class="flex-row nav-toggle">
                 <div class="menu-toggle">
-                    <label class=" icon-32 icon-burger" for="menu-checkbox"></label>
+                    <label for="menu-checkbox">
+                        <span class="fa-host">
+                            <i class="fa fa-bars fa-2x"></i>
+                        </span>
+                    </label>
+
                 </div>
 
                 <div class="welcome-wrapper">
