--- a/src/FlatMate.Web/wwwroot/css/shared/navigation.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/navigation.scss
@@ -1,5 +1,4 @@
-﻿@import "../var/colors.scss";
-@import "../var/sizes.scss";
+﻿@import '../variables.scss';
 
 @media all and (min-width: 1201px) {
     #menu-checkbox:not(:checked) ~ nav {
@@ -10,7 +9,6 @@
         width: 0;
     }
 }
-
 
 @media all and (max-width: 1200px) {
     #menu-checkbox:not(:checked) ~ nav {
@@ -68,7 +66,7 @@ nav + main {
 @media all and (min-width: 1201px) {
     nav + main {
         margin-left: $nav-width;
-        width:auto;
+        width: auto;
     }
 }
 
