--- a/src/FlatMate.Web/wwwroot/css/shared/alert.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/alert.scss
@@ -1,5 +1,4 @@
-﻿@import '../var/colors.scss';
-@import '../var/sizes.scss';
+﻿@import '../variables.scss';
 
 @mixin alert-variant($color) {
     background-color: lighten($color, 30%);
@@ -12,7 +11,7 @@
 }
 
 .alert {
-    border: 1px solid transparent;    
+    border: 1px solid transparent;
     padding: .5rem .5rem;
     margin-bottom: .5rem;
     width: 100%;
@@ -25,4 +24,3 @@
 .alert-success {
     @include alert-variant($color-success);
 }
-
