--- a/src/FlatMate.Web/wwwroot/css/shared/form.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/form.scss
@@ -1,5 +1,4 @@
-﻿@import '../var/colors.scss';
-@import '../var/sizes.scss';
+﻿@import '../variables.scss';
 
 @mixin btn-variant($color) {
     background-color: $color;
@@ -11,7 +10,7 @@
     }
 
     &:focus {
-        box-shadow: inset 0 1px 10px rgba(0,0,0,.3);
+        box-shadow: inset 0 1px 10px rgba(0, 0, 0, .3);
     }
 }
 
@@ -89,7 +88,8 @@ input[type='search']:focus,
 input[type='tel']:focus,
 input[type='text']:focus,
 input[type='url']:focus,
-textarea:focus, select:focus {
+textarea:focus,
+select:focus {
     border-color: $color-primary;
     outline: none;
 }
