--- a/src/FlatMate.Web/wwwroot/css/shared/main.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/main.scss
@@ -1,6 +1,4 @@
-﻿@import '../var/colors.scss';
-@import '../var/font.scss';
-@import '../var/sizes.scss';
+﻿@import '../variables.scss';
 
 html {
     color: $color-font;
@@ -10,7 +8,8 @@ html {
     line-height: 1.5;
 }
 
-html, body {
+html,
+body {
     padding: 0;
     margin: 0;
     background-color: $color-main-background;
@@ -26,8 +25,12 @@ div {
     box-sizing: border-box;
 }
 
-
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
     margin-bottom: .5rem;
     font-weight: 300;
@@ -52,7 +55,7 @@ h3 {
 header {
     background-color: #fff;
     border-bottom: 1px solid $color-border;
-    box-shadow: 0 1px 3px rgba(0,0,0,.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .1);
     position: fixed;
     top: 0;
     width: 100vw;
@@ -98,7 +101,8 @@ a {
     text-decoration: none;
     transition: color linear .1s, border-color linear .1s;
 
-    &:hover, &:active {
+    &:hover,
+    &:active {
         color: darken($color-primary, 10%);
         text-decoration: none;
     }
